Added Validation with tags. Added a try of bootstrap to the createproblems form

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,6 @@
 prueba=probando1
 prueba2=probando2
+CP_title=Create a problem
 CP_idMethodSelect=Select a method:
 CP_numVariablesSelect=Select the number of variables:
 CP_uniqueAnswerCheckbox=Can it be answered more than one time?
@@ -10,3 +11,7 @@ CP_equation3=3.-
 CP_variableX=X:
 CP_variableY=Y:
 CP_variableZ=Z:
+
+
+##Validacion
+createproblem.validation.numvariables=Entre 2 y 3 variables
