Change CreateProblem to CreateProblemDTO and moved to package ...web.DTO Add last version of bootstrap and jquery to createproblem.jsp and fix issues caused by the change

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,6 @@
 prueba=probando1
 prueba2=probando2
+##CreateProblem
 CP_title=Create a problem
 CP_idMethodSelect=Select a method:
 CP_numVariablesSelect=Select the number of variables:
@@ -12,6 +13,9 @@ CP_variableX=X:
 CP_variableY=Y:
 CP_variableZ=Z:
 
-
 ##Validacion
-createproblem.validation.numvariables=Entre 2 y 3 variables
+createproblem.validation.numvariables=You must choose a number of variables
+createproblem.validation.idmethod=You must choose a method
+
+##ProblemsList
+LP_title=Problems List
