Started the development of the listanswer page.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -19,3 +19,7 @@ createproblem.validation.idmethod=You must choose a method
 
 ##ProblemsList
 LP_title=Problems List
+
+
+##ListAnswer
+LA_title=List Answers
