JSPs are now i18n standard in spanish and english Update message of validations Update topnav

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,11 +1,32 @@
-prueba=probando1
-prueba2=probando2
+###################################################################
+########################     VALIDATION     #######################
+###################################################################
+createproblem.validation.title=You must insert a title
+createproblem.validation.title.size=The title length must be between 1 and 45 characters
+createproblem.validation.numvariables=You must choose a number of variables
+createproblem.validation.idmethod=You must choose a method
+createproblem.validation.equation.size=The equation length must be between 1 and 30 characters
+createproblem.validation.solution.size=The value of the variable length must be between 1 and 15 characters
+
+
+###################################################################
+#########################     WEBPAGES     ########################
+###################################################################
+
 ##CreateProblem
 CP_title=Create a problem
+CP_subtitle=Choose the options to create a problem
 CP_idMethodSelect=Select a method:
 CP_numVariablesSelect=Select the number of variables:
 CP_uniqueAnswerCheckbox=Can it be answered more than one time?
 CP_solutionCheckbox=Do you want to store the answer?
+CP_problemTitle=Title
+CP_idMethods=Method
+CP_numVariables=Number of Variables
+CP_equations=Equations
+CP_InitDate=Start Date
+CP_EndDate=End Date
+CP_button_create=Create
 CP_equation1=1.-
 CP_equation2=2.-
 CP_equation3=3.-
@@ -13,13 +34,56 @@ CP_variableX=X:
 CP_variableY=Y:
 CP_variableZ=Z:
 
-##Validacion
-createproblem.validation.numvariables=You must choose a number of variables
-createproblem.validation.idmethod=You must choose a method
 
 ##ProblemsList
 LP_title=Problems List
+LP_subtitle=View or remove the problems from the table
+###ProblemsList Modal
+LP_modal_equation=Equations
+LP_modal_solution=Solution
+LP_modal_delete=Delete Problem
+LP_modal_message=If you delete the problem you will also delete the answers of the students. Are you sure you want to delete this problem?
+LP_modal_button_close=Close
+LP_modal_button_delete=Delete
+###ProblemsList Table
+LP_table_problem=Problem Title
+LP_table_teacher=Teacher
+LP_table_method=Method
+LP_table_multianswer=Multianswer
+LP_table_initDate=Start Date
+LP_table_endDate=End Date
+LP_table_equations=Equations
+LP_table_solutions=Solutions
+LP_table_actions=Actions
+LP_table_button_view=View
+LP_table_button_delete=Delete
 
 
 ##ListAnswer
 LA_title=List Answers
+LA_subtitle=View the answers of the students on the table
+##ListAnswer Modal
+LA_modal_answer=Answer
+LP_modal_button_close=Close
+##ListAnswer Table
+LA_table_problem=Problem
+LA_table_student=Student
+LA_table_answerDate=Answer Date
+LA_table_solution=Solution
+LA_table_steps=Steps
+LA_table_button_view=View
+
+##Home
+H_title=Home
+H_subtitle=Welcome
+H_text= Please, choose on the topnav to create a problem, list the problemas already created or view the answers from the students
+
+
+##ProblemCreated
+PC_title=Problem Created
+PC_subtitle=Your problem has been successfully created
+PC_text=You can view your problem choosing List Problems in the topnav
+
+##Commons
+Toggle_Navigation=Toggle navigation
+Home=Home
