--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -1,11 +1,88 @@
-prueba=probando3
+###################################################################
+########################     VALIDATION     #######################
+###################################################################
+createproblem.validation.title=Debe introducir un título
+createproblem.validation.title.size=La longitud del título de estar entre 1 y 45 caracteres
+createproblem.validation.numvariables=Debe seleccionar un número de variables
+createproblem.validation.idmethod=Debe seleccionar un método
+createproblem.validation.equation.size=La longitud de la ecuación de estar entre 1 y 30 caracteres
+createproblem.validation.solution.size=La longitud del valor de la variable debe de estar entre 1 y 15 caracteres
+
+
+###################################################################
+#########################     WEBPAGES     ########################
+###################################################################
+
+##CreateProblem
+CP_title=Crear un Problema
+CP_subtitle=Seleccione las opciones para crear un problema
 CP_idMethodSelect=Seleccione un método:
-CP_numVariablesSelect=Seleccione el número de variables:
+CP_numVariablesSelect=Selecione el número de variables:
 CP_uniqueAnswerCheckbox=¿Puede ser respondido más de una vez?
-CP_solutionCheckbox=¿Quiere almacenar también la respuesta?
+CP_solutionCheckbox=¿Quiere guardar la respuesta del problema?
+CP_problemTitle=Título
+CP_idMethods=Método
+CP_numVariables=Número de Variables
+CP_equations=Ecuaciones
+CP_InitDate=Fecha de Inicio
+CP_EndDate=Fecha de Fin
+CP_button_create=Crear
 CP_equation1=1.-
 CP_equation2=2.-
 CP_equation3=3.-
 CP_variableX=X:
 CP_variableY=Y:
 CP_variableZ=Z:
+
+
+##ProblemsList
+LP_title=Listado de Problemas
+LP_subtitle=Vea o borre los problemas de la tabla
+###ProblemsList Modal
+LP_modal_equation=Ecuaciones
+LP_modal_solution=Solución
+LP_modal_delete=Borrar Problema
+LP_modal_message=Si borra el problema también borrara las respuestas de los alumnos. ¿Está seguro de que desea borrar el problema?
+LP_modal_button_close=Cerrar
+LP_modal_button_delete=Borrar
+###ProblemsList Table
+LP_table_problem=Título
+LP_table_teacher=Profesor
+LP_table_method=Método
+LP_table_multianswer=Multirespuesta
+LP_table_initDate=Fecha de Inicio
+LP_table_endDate=Fecha de Fin
+LP_table_equations=Ecuaciones
+LP_table_solutions=Soluciones
+LP_table_actions=Acciones
+LP_table_button_view=Ver
+LP_table_button_delete=Borrar
+
+
+##ListAnswer
+LA_title=Listado de Respuestas
+LA_subtitle=Consulte las respuestas de los estudiantes en la tabla
+##ListAnswer Modal
+LA_modal_answer=Respuesta de 
+LP_modal_button_close=Cerrar 
+##ListAnswer Table
+LA_table_problem=Problema
+LA_table_student=Estudiante
+LA_table_answerDate=Fecha de Respuesta
+LA_table_solution=Solución
+LA_table_steps=Pasos
+LA_table_button_view=Ver
+
+##Home
+H_title=Home
+H_subtitle=Bienvenido
+H_text= Por favor, elija en el menú superior si desea crear un problema, ver los problemas existentes o consultar las respuestas de los alumnos
+
+##ProblemCreated
+PC_title=Problema Creado
+PC_subtitle=Su problema ha sido creado satisfactoriamente
+PC_text=Puede ver el problema que acaba de crear seleccionando Listado de Problemas en el menú superior
+
+##Commons
+Toggle_Navigation=Toggle navigation
+Home=Home
