Changed custom class annotation name Now It also validate that the start date is before the end date Associated the customs errors to numVariables, initDate and checkSolution Updated messages Changed minor style details in listproblem Now the dates must be inserted

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,12 +1,19 @@
 ###################################################################
 ########################     VALIDATION     #######################
 ###################################################################
-createproblem.validation.title=You must insert a title
-createproblem.validation.title.size=The title length must be between 1 and 45 characters
-createproblem.validation.numvariables=You must choose a number of variables
-createproblem.validation.idmethod=You must choose a method
+createproblem.validation.title=You should insert a title
+createproblem.validation.title.size=The title length should be between 1 and 45 characters
+createproblem.validation.numvariables=You should choose a number of variables
+createproblem.validation.idmethod=You should choose a method
 createproblem.validation.equation.size=The equation length must be between 1 and 30 characters
 createproblem.validation.solution.size=The value of the variable length must be between 1 and 15 characters
+createproblem.validation.equations.2required=You should insert equations 1 and 2
+createproblem.validation.equations.3required=You should insert equations 1, 2 and 3
+createproblem.validation.solution.2required=You should insert the values of ''X'' and ''Y''
+createproblem.validation.solution.3required=You should insert the values of  ''X'', ''Y'' and ''Z''
+createproblem.validation.dates=The Start Date should be before the End Date
+createproblem.validation.initDate=You should insert a Start Date
+createproblem.validation.endDate=You should insert an End Date
 
 
 ###################################################################
