--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -7,6 +7,13 @@ createproblem.validation.numvariables=Debe seleccionar un número de variables
 createproblem.validation.idmethod=Debe seleccionar un método
 createproblem.validation.equation.size=La longitud de la ecuación de estar entre 1 y 30 caracteres
 createproblem.validation.solution.size=La longitud del valor de la variable debe de estar entre 1 y 15 caracteres
+createproblem.validation.equations.2required=Debe introducir las ecuaciones 1 y 2
+createproblem.validation.equations.3required=Debe introducir las ecuaciones 1, 2 y 3
+createproblem.validation.solution.2required=Debe introducir los valores de ''X'' e ''Y''
+createproblem.validation.solution.3required=Debe introducir los valores de ''X'', ''Y'' y ''Z''
+createproblem.validation.dates=La Fecha de Inicio debe ser anterior a la Fecha de Fin
+createproblem.validation.initDate=Debe introducir una Fecha de Inicio
+createproblem.validation.endDate=Debe Introducir una Fecha de Fin
 
 
 ###################################################################
@@ -53,7 +60,7 @@ LP_table_multianswer=Multirespuesta
 LP_table_initDate=Fecha de Inicio
 LP_table_endDate=Fecha de Fin
 LP_table_equations=Ecuaciones
-LP_table_solutions=Soluciones
+LP_table_solutions=Solución
 LP_table_actions=Acciones
 LP_table_button_view=Ver
 LP_table_button_delete=Borrar
