--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -42,7 +42,7 @@ CP_variableY=Y:
 CP_variableZ=Z:
 
 
-##ProblemsList
+##ListProblem
 LP_title=Listado de Problemas
 LP_subtitle=Vea o borre los problemas de la tabla
 ###ProblemsList Modal
@@ -80,15 +80,40 @@ LA_table_solution=Solución
 LA_table_steps=Pasos
 LA_table_button_view=Ver
 
+
 ##Home
 H_title=Home
 H_subtitle=Bienvenido
 H_text= Por favor, elija en el menú superior si desea crear un problema, ver los problemas existentes o consultar las respuestas de los alumnos
 
+
 ##ProblemCreated
 PC_title=Problema Creado
 PC_subtitle=Su problema ha sido creado satisfactoriamente
 PC_text=Puede ver el problema que acaba de crear seleccionando Listado de Problemas en el menú superior
+
+
+##StudentListProblem
+SLP_title=Listado de Problemas
+SLP_subtitle=Vea o borre los problemas de la tabla
+###ProblemsList Modal
+SLP_modal_equation=Ecuaciones
+SLP_modal_solve=Resolver Problema
+SLP_modal_message=Este problema sólo puede responderse una vez. Si envía su respuesta en la siguiente pantalla no podrá volver a resolverlo.
+SLP_modal_button_close=Cerrar
+SLP_modal_button_solve=Resolver
+###ProblemsList Table
+SLP_table_problem=Título
+SLP_table_teacher=Profesor
+SLP_table_method=Método
+SLP_table_multianswer=Multirespuesta
+SLP_table_initDate=Fecha de Inicio
+SLP_table_endDate=Fecha de Fin
+SLP_table_equations=Ecuaciones
+SLP_table_actions=Acciones
+SLP_table_button_view=Ver
+SLP_table_button_solve=Resolver
+
 
 ##Commons
 Toggle_Navigation=Toggle navigation
