Fixed topnav and logger

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -113,6 +113,31 @@ SLP_table_actions=Actions
 SLP_table_button_view=View
 SLP_table_button_solve=Solve
 
+##StudentHome
+SH_title=Home
+SH_subtitle=Welcome
+SH_text=Please, choose on the topnav to solve a problem from the list or to view a list of your answers
+
+
+##StudentListAnswer
+SLA_title=List Answers
+SLA_subtitle=View your answers on the table
+##ListAnswer Modal
+SLA_modal_answer=Answer
+LP_modal_button_close=Close
+##ListAnswer Table
+SLA_table_problem=Problem
+SLA_table_teacher=Teacher
+SLA_table_answerDate=Answer Date
+SLA_table_solution=Solution
+SLA_table_steps=Steps
+SLA_table_button_view=View
+
+
+##StudentSolveProblem
+SSP_title=Solve Problem
+SSP_subtitle=Submit your solution to the problem
+
 
 ##Commons
 Toggle_Navigation=Toggle navigation
