--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -115,6 +115,32 @@ SLP_table_button_view=Ver
 SLP_table_button_solve=Resolver
 
 
+##StudentHome
+SH_title=Home
+SH_subtitle=Bienvenido
+SH_text=Por favor, elija en el menú superior responder un problema de la lista o consultar una lista de sus respuestas
+
+
+##StudentListAnswer
+SLA_title=Listado de Respuestas
+SLA_subtitle=Vea sus respuestas en la tabla
+##ListAnswer Modal
+SLA_modal_answer=Respuesta de 
+LP_modal_button_close=Cerrar 
+##ListAnswer Table
+SLA_table_problem=Problema
+SLA_table_teacher=Profesor
+SLA_table_answerDate=Fecha de Respuesta
+SLA_table_solution=Solución
+SLA_table_steps=Pasos
+SLA_table_button_view=Ver
+
+
+##StudentSolveProblem
+SSP_title=Resolver Problema
+SSP_subtitle=Envía su solución al problema
+
+
 ##Commons
 Toggle_Navigation=Toggle navigation
 Home=Home
