Fixed a spanish message

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -140,7 +140,7 @@ SLA_table_button_view=Ver
 
 ##StudentSolveProblem
 SSP_title=Resolver Problema
-SSP_subtitle=Envía su solución al problema
+SSP_subtitle=Envía tu solución al problema
 
 
 ##Commons
