Updated datatable responsive to 1.0.5 and removed from cdn, now they are in local Added messages_en

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -125,8 +125,8 @@ SH_text=Por favor, elija en el menú superior responder un problema de la lista o
 SLA_title=Listado de Respuestas
 SLA_subtitle=Vea sus respuestas en la tabla
 ##ListAnswer Modal
-SLA_modal_answer=Respuesta de 
-SLA_modal_equation=Ecuaciones
+SLA_modal_answer=Pasos
+SLA_modal_equation=Ecuaciones de 
 SLA_modal_button_close=Cerrar 
 ##ListAnswer Table
 SLA_table_problem=Problema
