--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -70,7 +70,7 @@ LP_table_button_delete=Delete
 LA_title=List Answers
 LA_subtitle=View the answers of the students on the table
 ##ListAnswer Modal
-LA_modal_answer=Answer
+LA_modal_answer=Steps
 LA_modal_button_close=Close
 ##ListAnswer Table
 LA_table_problem=Problem
