--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -46,8 +46,8 @@ CP_variableZ=Z:
 LP_title=Listado de Problemas
 LP_subtitle=Vea o borre los problemas de la tabla
 ###ProblemsList Modal
-LP_modal_equation=Ecuaciones
-LP_modal_solution=Solución
+LP_modal_equation=Ecuaciones de 
+LP_modal_solution=Solución de 
 LP_modal_delete=Borrar Problema
 LP_modal_message=Si borra el problema también borrara las respuestas de los alumnos. ¿Está seguro de que desea borrar el problema?
 LP_modal_button_close=Cerrar
@@ -70,7 +70,7 @@ LP_table_button_delete=Borrar
 LA_title=Listado de Respuestas
 LA_subtitle=Consulte las respuestas de los estudiantes en la tabla
 ##ListAnswer Modal
-LA_modal_answer=Respuesta de 
+LA_modal_answer=Pasos de 
 LA_modal_button_close=Cerrar 
 ##ListAnswer Table
 LA_table_problem=Problema
@@ -97,7 +97,7 @@ PC_text=Puede ver el problema que acaba de crear seleccionando Listado de Proble
 SLP_title=Listado de Problemas
 SLP_subtitle=Vea o borre los problemas de la tabla
 ###ProblemsList Modal
-SLP_modal_equation=Ecuaciones
+SLP_modal_equation=Ecuaciones de 
 SLP_modal_solve=Resolver Problema
 SLP_modal_message=Este problema sólo puede responderse una vez. Si envía su respuesta en la siguiente pantalla no podrá volver a resolverlo.
 SLP_modal_button_close=Cerrar
