Now only answer pages show time and date. Updated messages

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -94,7 +94,7 @@ PC_text=You can view your problem choosing List Problems in the topnav
 
 ##StudentListProblem
 SLP_title=Problems List
-SLP_subtitle=View or remove the problems from the table
+SLP_subtitle=View or solve the problems from the table
 ###ProblemsList Modal
 SLP_modal_equation=Equations
 SLP_modal_solve=Solve Problem
@@ -138,7 +138,16 @@ SLA_table_button_view=View
 
 ##StudentSolveProblem
 SSP_title=Solve Problem
-SSP_subtitle=Submit your solution to the problem
+SSP_subtitle=Problem Data
+SSP_form_header=Submit your solution to the problem
+SSP_teacher=Teacher:
+SSP_problem=Problem:
+SSP_init_date=Init Date:
+SSP_end_date=End Date:
+SSP_method=Method:
+SSP_multianswer=Multianswer:
+SSP_equations=Equations:
+SSP_numvariables=Number of Variables:
 
 
 ##Commons
