--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -95,7 +95,7 @@ PC_text=Puede ver el problema que acaba de crear seleccionando Listado de Proble
 
 ##StudentListProblem
 SLP_title=Listado de Problemas
-SLP_subtitle=Vea o borre los problemas de la tabla
+SLP_subtitle=Consulte o resuelva los problemas de la tabla
 ###ProblemsList Modal
 SLP_modal_equation=Ecuaciones de 
 SLP_modal_solve=Resolver Problema
@@ -123,7 +123,7 @@ SH_text=Por favor, elija en el menú superior responder un problema de la lista o
 
 ##StudentListAnswer
 SLA_title=Listado de Respuestas
-SLA_subtitle=Vea sus respuestas en la tabla
+SLA_subtitle=Consulte sus respuestas en la tabla
 ##ListAnswer Modal
 SLA_modal_answer=Pasos
 SLA_modal_equation=Ecuaciones de 
@@ -140,7 +140,16 @@ SLA_table_button_view=Ver
 
 ##StudentSolveProblem
 SSP_title=Resolver Problema
-SSP_subtitle=Envía tu solución al problema
+SSP_subtitle=Datos del Problema
+SSP_form_header=Envía tu solución al problema
+SSP_teacher=Profesor:
+SSP_problem=Problema:
+SSP_init_date=Fecha de Inicio:
+SSP_end_date=Fecha de Fin:
+SSP_method=Método:
+SSP_multianswer=Multirespuesta:
+SSP_equations=Ecuaciones:
+SSP_numvariables=Número de Variables:
 
 
 ##Commons
