Added js files Minor changes

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -148,6 +148,9 @@ SSP_method=Method:
 SSP_multianswer=Multianswer:
 SSP_equations=Equations:
 SSP_numvariables=Number of Variables:
+SSP_validation_required=Field required
+SSP_validation_lenght=There can not be more than 30 characters
+SSP_validation_character=You have enter an invalid character
 
 
 ##Commons
