--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -150,6 +150,9 @@ SSP_method=Método:
 SSP_multianswer=Multirespuesta:
 SSP_equations=Ecuaciones:
 SSP_numvariables=Número de Variables:
+SSP_validation_required=Campo obligatorio
+SSP_validation_lenght=La longitud máxima de este campo es de 30 caracteres
+SSP_validation_character=Ha introducido un carácter inválido
 
 
 ##Commons
