--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -148,9 +148,21 @@ SSP_method=Method:
 SSP_multianswer=Multianswer:
 SSP_equations=Equations:
 SSP_numvariables=Number of Variables:
+SSP_insert_solution=Introduzca la solución:
+SSP_button_create=Send
+SSP_variableX=X:
+SSP_variableY=Y:
+SSP_variableZ=Z:
+SSP_elements=Insert your steps with the next options:
 SSP_validation_required=Field required
-SSP_validation_lenght=There can not be more than 30 characters
+SSP_validation_lenght=There cannot be more than 30 characters
 SSP_validation_character=You have enter an invalid character
+
+
+##StudentProblemSolved
+SPS_title=Answer Saved
+SPS_subtitle=Your answer has been successfully saved
+SPS_text=You can view your answer choosing List Answers in the topnav
 
 
 ##Commons
