--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -141,7 +141,7 @@ SLA_table_button_view=Ver
 ##StudentSolveProblem
 SSP_title=Resolver Problema
 SSP_subtitle=Datos del Problema
-SSP_form_header=Envía tu solución al problema
+SSP_form_header=Envíe su solución al problema
 SSP_teacher=Profesor:
 SSP_problem=Problema:
 SSP_init_date=Fecha de Inicio:
@@ -150,9 +150,21 @@ SSP_method=Método:
 SSP_multianswer=Multirespuesta:
 SSP_equations=Ecuaciones:
 SSP_numvariables=Número de Variables:
+SSP_insert_solution=Introduzca la solución:
+SSP_button_create=Enviar
+SSP_variableX=X:
+SSP_variableY=Y:
+SSP_variableZ=Z:
+SSP_elements=Inserte los pasos que realice con las siguientes opciones:
 SSP_validation_required=Campo obligatorio
 SSP_validation_lenght=La longitud máxima de este campo es de 30 caracteres
 SSP_validation_character=Ha introducido un carácter inválido
+
+
+##StudentProblemSolved
+SPS_title=Respuesta Guardada
+SPS_subtitle=Su respuesta ha sido guardada satisfactoriamente
+SPS_text=Puede ver la respuesta que acaba de guardar seleccionando Listado de Respuestas en el menú superior
 
 
 ##Commons
