Fixed 1formula validation in create problem Extracted styles from create problem to custom css

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -7,8 +7,10 @@ createproblem.validation.numvariables=You should choose a number of variables
 createproblem.validation.idmethod=You should choose a method
 createproblem.validation.equation.size=The equation length must be between 1 and 30 characters
 createproblem.validation.solution.size=The value of the variable length must be between 1 and 15 characters
+createproblem.validation.equations.1required=You should insert equation 1
 createproblem.validation.equations.2required=You should insert equations 1 and 2
 createproblem.validation.equations.3required=You should insert equations 1, 2 and 3
+createproblem.validation.solution.1required=You should insert the value of ''X''
 createproblem.validation.solution.2required=You should insert the values of ''X'' and ''Y''
 createproblem.validation.solution.3required=You should insert the values of  ''X'', ''Y'' and ''Z''
 createproblem.validation.dates=The Start Date should be before the End Date
