--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -2,13 +2,15 @@
 ########################     VALIDATION     #######################
 ###################################################################
 createproblem.validation.title=Debe introducir un título
-createproblem.validation.title.size=La longitud del título de estar entre 1 y 45 caracteres
+createproblem.validation.title.size=La longitud del título debe estar entre 1 y 45 caracteres
 createproblem.validation.numvariables=Debe seleccionar un número de variables
 createproblem.validation.idmethod=Debe seleccionar un método
 createproblem.validation.equation.size=La longitud de la ecuación de estar entre 1 y 30 caracteres
 createproblem.validation.solution.size=La longitud del valor de la variable debe de estar entre 1 y 15 caracteres
+createproblem.validation.equations.1required=Debe introducir la ecuación 1
 createproblem.validation.equations.2required=Debe introducir las ecuaciones 1 y 2
 createproblem.validation.equations.3required=Debe introducir las ecuaciones 1, 2 y 3
+createproblem.validation.solution.1required=Debe introducir el valor de ''X''
 createproblem.validation.solution.2required=Debe introducir los valores de ''X'' e ''Y''
 createproblem.validation.solution.3required=Debe introducir los valores de ''X'', ''Y'' y ''Z''
 createproblem.validation.dates=La Fecha de Inicio debe ser anterior a la Fecha de Fin
