Fixed styles for IE

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -158,7 +158,7 @@ SSP_variableZ=Z:
 SSP_elements=Insert your steps with the next options:
 SSP_validation_required=Field required
 SSP_validation_lenght=There cannot be more than 30 characters
-SSP_validation_character=You have enter an invalid character
+SSP_validation_character=You have entered an invalid character
 
 
 ##StudentProblemSolved
