Error handling Updates messages

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,8 +7,10 @@ createproblem.validation.numvariables=You should choose a number of variables
 createproblem.validation.idmethod=You should choose a method
 createproblem.validation.equation.size=The equation length must be between 1 and 30 characters
 createproblem.validation.solution.size=The value of the variable length must be between 1 and 15 characters
+createproblem.validation.equations.1required=You should insert equation 1
 createproblem.validation.equations.2required=You should insert equations 1 and 2
 createproblem.validation.equations.3required=You should insert equations 1, 2 and 3
+createproblem.validation.solution.1required=You should insert the value of ''X''
 createproblem.validation.solution.2required=You should insert the values of ''X'' and ''Y''
 createproblem.validation.solution.3required=You should insert the values of  ''X'', ''Y'' and ''Z''
 createproblem.validation.dates=The Start Date should be before the End Date
@@ -70,7 +72,7 @@ LP_table_button_delete=Delete
 LA_title=List Answers
 LA_subtitle=View the answers of the students on the table
 ##ListAnswer Modal
-LA_modal_answer=Answer
+LA_modal_answer=Steps
 LA_modal_button_close=Close
 ##ListAnswer Table
 LA_table_problem=Problem
@@ -79,6 +81,7 @@ LA_table_answerDate=Answer Date
 LA_table_solution=Solution
 LA_table_steps=Steps
 LA_table_button_view=View
+
 
 ##Home
 H_title=Home
@@ -94,7 +97,7 @@ PC_text=You can view your problem choosing List Problems in the topnav
 
 ##StudentListProblem
 SLP_title=Problems List
-SLP_subtitle=View or remove the problems from the table
+SLP_subtitle=View or solve the problems from the table
 ###ProblemsList Modal
 SLP_modal_equation=Equations
 SLP_modal_solve=Solve Problem
@@ -113,6 +116,7 @@ SLP_table_actions=Actions
 SLP_table_button_view=View
 SLP_table_button_solve=Solve
 
+
 ##StudentHome
 SH_title=Home
 SH_subtitle=Welcome
@@ -123,7 +127,7 @@ SH_text=Please, choose on the topnav to solve a problem from the list or to view
 SLA_title=List Answers
 SLA_subtitle=View your answers on the table
 ##ListAnswer Modal
-SLA_modal_answer=Answer
+SLA_modal_answer=Steps
 SLA_modal_equation=Equations
 SLA_modal_button_close=Close
 ##ListAnswer Table
@@ -138,9 +142,44 @@ SLA_table_button_view=View
 
 ##StudentSolveProblem
 SSP_title=Solve Problem
-SSP_subtitle=Submit your solution to the problem
+SSP_subtitle=Problem Data
+SSP_form_header=Submit your solution to the problem
+SSP_teacher=Teacher:
+SSP_problem=Problem:
+SSP_init_date=Init Date:
+SSP_end_date=End Date:
+SSP_method=Method:
+SSP_multianswer=Multianswer:
+SSP_equations=Equations:
+SSP_numvariables=Number of Variables:
+SSP_insert_solution=Introduzca la solución:
+SSP_button_create=Send
+SSP_variableX=X:
+SSP_variableY=Y:
+SSP_variableZ=Z:
+SSP_elements=Insert your steps with the next options:
+SSP_validation_required=Field required
+SSP_validation_lenght=There cannot be more than 30 characters
+SSP_validation_character=You have entered an invalid character
+
+
+##StudentProblemSolved
+SPS_title=Answer Saved
+SPS_subtitle=Your answer has been successfully saved
+SPS_text=You can view your answer choosing List Answers in the topnav
 
 
 ##Commons
 Toggle_Navigation=Toggle navigation
 Home=Home
+
+#ErrorStudent
+ES_title=Error
+ES_subtitle=There has been an error
+
+###################################################################
+###################     HANDLING EXCEPTIONS     ###################
+###################################################################
+EX_idproblem_cast=The problem you where going to solve has not been recovered correctly, please try again
+
+
