--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -82,6 +82,7 @@ LA_table_solution=Solution
 LA_table_steps=Steps
 LA_table_button_view=View
 
+
 ##Home
 H_title=Home
 H_subtitle=Welcome
@@ -114,6 +115,7 @@ SLP_table_equations=Equations
 SLP_table_actions=Actions
 SLP_table_button_view=View
 SLP_table_button_solve=Solve
+
 
 ##StudentHome
 SH_title=Home
@@ -170,3 +172,14 @@ SPS_text=You can view your answer choosing List Answers in the topnav
 ##Commons
 Toggle_Navigation=Toggle navigation
 Home=Home
+
+#ErrorStudent
+ES_title=Error
+ES_subtitle=There has been an error
+
+###################################################################
+###################     HANDLING EXCEPTIONS     ###################
+###################################################################
+EX_idproblem_cast=The problem you where going to solve has not been recovered correctly, please try again
+
+
