--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -172,3 +172,14 @@ SPS_text=Puede ver la respuesta que acaba de guardar seleccionando Listado de Re
 ##Commons
 Toggle_Navigation=Toggle navigation
 Home=Home
+
+#ErrorStudent
+ES_title=Error
+ES_subtitle=Se ha producido un error
+
+###################################################################
+###################     HANDLING EXCEPTIONS     ###################
+###################################################################
+EX_idproblem_cast=No se ha recuperado correctamente el problema a resolver, por favor, vuelva a intentarlo
+
+
