More exceptions handled

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -181,5 +181,5 @@ ES_subtitle=There has been an error
 ###################     HANDLING EXCEPTIONS     ###################
 ###################################################################
 EX_idproblem_cast=The problem you where going to solve has not been recovered correctly, please try again
-
+EX_idproblem_already_solved=The problem can only been answered one time and you have already done it
 
