--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -181,5 +181,6 @@ ES_subtitle=Se ha producido un error
 ###################     HANDLING EXCEPTIONS     ###################
 ###################################################################
 EX_idproblem_cast=No se ha recuperado correctamente el problema a resolver, por favor, vuelva a intentarlo
+EX_idproblem_already_solved=El problema sólo permite enviar la respuesta una vez y ya lo ha hecho usted anteriormente
 
 
