More error handling

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -173,13 +173,20 @@ SPS_text=You can view your answer choosing List Answers in the topnav
 Toggle_Navigation=Toggle navigation
 Home=Home
 
+
 #ErrorStudent
 ES_title=Error
 ES_subtitle=There has been an error
 
+
+#FatalError
+FE_title=Error
+FE_subtitle=There has been an error
+FE_text=Please, report this error to the administrator
+
 ###################################################################
 ###################     HANDLING EXCEPTIONS     ###################
 ###################################################################
-EX_idproblem_cast=The problem you where going to solve has not been recovered correctly, please try again
+EX_idproblem_cast=The problem you where going to solve has not been recovered correctly, please try again and if the error persist report it to the administrator
 EX_idproblem_already_solved=The problem can only been answered one time and you have already done it
 
