--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -173,14 +173,21 @@ SPS_text=Puede ver la respuesta que acaba de guardar seleccionando Listado de Re
 Toggle_Navigation=Toggle navigation
 Home=Home
 
+
 #ErrorStudent
 ES_title=Error
 ES_subtitle=Se ha producido un error
 
+
+#FatalError
+FE_title=Error
+FE_subtitle=Se ha producido un error
+FE_text=Por favor, contacte con el administrador para reportar este error
+
 ###################################################################
 ###################     HANDLING EXCEPTIONS     ###################
 ###################################################################
-EX_idproblem_cast=No se ha recuperado correctamente el problema a resolver, por favor, vuelva a intentarlo
-EX_idproblem_already_solved=El problema sólo permite enviar la respuesta una vez y ya lo ha hecho usted anteriormente
+EX_idproblem_cast=No se ha recuperado correctamente el problema a resolver, por favor, vuelva a intentarlo y si el error persiste comuníqueselo al administrador
+EX_idproblem_already_solved=El problema sólo permite enviar la respuesta una vez y usted ya lo ha hecho anteriormente
 
 
