changed combo of matrix and added messages for combos

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -152,7 +152,7 @@ SSP_method=Method:
 SSP_multianswer=Multianswer:
 SSP_equations=Equations:
 SSP_numvariables=Number of Variables:
-SSP_insert_solution=Introduzca la solución:
+SSP_insert_solution=Insert the solution:
 SSP_button_create=Send
 SSP_variableX=X:
 SSP_variableY=Y:
@@ -161,6 +161,25 @@ SSP_elements=Insert your steps with the next options:
 SSP_validation_required=Field required
 SSP_validation_lenght=There cannot be more than 30 characters
 SSP_validation_character=You have entered an invalid character
+##Combos
+SSP_matrices=Matrices
+SSP_1x2=1x2
+SSP_1x3=1x3
+SSP_1x4=1x4
+SSP_2x1=2x1
+SSP_2x2=2x2
+SSP_2x3=2x3
+SSP_2x4=2x4
+SSP_3x1=3x1
+SSP_3x2=3x2
+SSP_3x3=3x3
+SSP_3x4=3x4
+SSP_formulas=Equations
+SSP_1_formula=1 equation
+SSP_2_formula=2 equations
+SSP_3_formula=3 equations
+SSP_resta_formula=Subtract 2 equations
+SSP_suma_formula=Add 2 equations
 
 
 ##StudentProblemSolved
