--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -161,6 +161,25 @@ SSP_elements=Inserte los pasos que realice con las siguientes opciones:
 SSP_validation_required=Campo obligatorio
 SSP_validation_lenght=La longitud máxima de este campo es de 30 caracteres
 SSP_validation_character=Ha introducido un carácter inválido
+##Combos
+SSP_matrices=Matrices
+SSP_1x2=1x2
+SSP_1x3=1x3
+SSP_1x4=1x4
+SSP_2x1=2x1
+SSP_2x2=2x2
+SSP_2x3=2x3
+SSP_2x4=2x4
+SSP_3x1=3x1
+SSP_3x2=3x2
+SSP_3x3=3x3
+SSP_3x4=3x4
+SSP_formulas=Ecuaciones
+SSP_1_formula=1 ecuación
+SSP_2_formula=2 ecuaciones
+SSP_3_formula=3 ecuaciones
+SSP_resta_formula=Resta de 2 ecuaciones
+SSP_suma_formula=Suma de 2 ecuaciones
 
 
 ##StudentProblemSolved
