Fixed animation inserting matrices Added placeholders Added maxlenght to mathjax inputs

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -180,6 +180,10 @@ SSP_2_formula=2 equations
 SSP_3_formula=3 equations
 SSP_resta_formula=Subtract 2 equations
 SSP_suma_formula=Add 2 equations
+SSP_placeholder_formula=Insert the equation
+SSP_placeholder_X=Value of X
+SSP_placeholder_Y=Value of Y
+SSP_placeholder_Z=Value of Z
 
 
 ##StudentProblemSolved
