--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -180,6 +180,10 @@ SSP_2_formula=2 ecuaciones
 SSP_3_formula=3 ecuaciones
 SSP_resta_formula=Resta de 2 ecuaciones
 SSP_suma_formula=Suma de 2 ecuaciones
+SSP_placeholder_formula=Introduce la ecuación
+SSP_placeholder_X=Valor de X
+SSP_placeholder_Y=Valor de Y
+SSP_placeholder_Z=Valor de Z
 
 
 ##StudentProblemSolved
