Moved jsp errors to views/error Handled 404 error (needed to modify web.xml to throw exception to catch)

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -202,10 +202,15 @@ ES_title=Error
 ES_subtitle=There has been an error
 
 
-#FatalError
-FE_title=Error
-FE_subtitle=There has been an error
-FE_text=Please, report this error to the administrator
+#ErrorFatal
+EF_title=Error
+EF_subtitle=There has been an error
+EF_text=Please, report this error to the administrator
+
+
+#Error404
+E404_title=Error 404
+E404_subtitle=The page you requested have not been found
 
 ###################################################################
 ###################     HANDLING EXCEPTIONS     ###################
