--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -202,10 +202,15 @@ ES_title=Error
 ES_subtitle=Se ha producido un error
 
 
-#FatalError
-FE_title=Error
-FE_subtitle=Se ha producido un error
-FE_text=Por favor, contacte con el administrador para reportar este error
+#ErrorFatal
+EF_title=Error
+EF_subtitle=Se ha producido un error
+EF_text=Por favor, contacte con el administrador para reportar este error
+
+
+#Error404
+E404_title=Error 404
+E404_subtitle=No se ha encontrado la página que ha solicitado
 
 ###################################################################
 ###################     HANDLING EXCEPTIONS     ###################
